Bug 1392202 - WebSocket CTOR should not try to look for the topmost window if the opener's top ancestor is equal to the current window top ancestor. r=smaug, a=lizzard